seaqt/QtWidgets/gen_qlcdnumber.nim


proc fcQLCDNumber_new(parent: pointer): ptr cQLCDNumber {.importc: "QLCDNumber_new".}
proc fcQLCDNumber_new2(): ptr cQLCDNumber {.importc: "QLCDNumber_new2".}
proc fcQLCDNumber_new3(numDigits: cuint): ptr cQLCDNumber {.importc: "QLCDNumber_new3".}
proc fcQLCDNumber_new4(numDigits: cuint, parent: pointer): ptr cQLCDNumber {.importc: "QLCDNumber_new4".}
proc fcQLCDNumber_metaObject(self: pointer, ): pointer {.importc: "QLCDNumber_metaObject".}
proc fcQLCDNumber_metacast(self: pointer, param1: cstring): pointer {.importc: "QLCDNumber_metacast".}
proc fcQLCDNumber_tr(s: cstring): struct_miqt_string {.importc: "QLCDNumber_tr".}
proc fcQLCDNumber_smallDecimalPoint(self: pointer, ): bool {.importc: "QLCDNumber_smallDecimalPoint".}
proc fcQLCDNumber_digitCount(self: pointer, ): cint {.importc: "QLCDNumber_digitCount".}
proc fcQLCDNumber_setDigitCount(self: pointer, nDigits: cint): void {.importc: "QLCDNumber_setDigitCount".}
proc fcQLCDNumber_checkOverflow(self: pointer, num: float64): bool {.importc: "QLCDNumber_checkOverflow".}
proc fcQLCDNumber_checkOverflowWithNum(self: pointer, num: cint): bool {.importc: "QLCDNumber_checkOverflowWithNum".}
proc fcQLCDNumber_mode(self: pointer, ): cint {.importc: "QLCDNumber_mode".}
proc fcQLCDNumber_setMode(self: pointer, mode: cint): void {.importc: "QLCDNumber_setMode".}
proc fcQLCDNumber_segmentStyle(self: pointer, ): cint {.importc: "QLCDNumber_segmentStyle".}
proc fcQLCDNumber_setSegmentStyle(self: pointer, segmentStyle: cint): void {.importc: "QLCDNumber_setSegmentStyle".}
proc fcQLCDNumber_value(self: pointer, ): float64 {.importc: "QLCDNumber_value".}
proc fcQLCDNumber_intValue(self: pointer, ): cint {.importc: "QLCDNumber_intValue".}
proc fcQLCDNumber_sizeHint(self: pointer, ): pointer {.importc: "QLCDNumber_sizeHint".}
proc fcQLCDNumber_display(self: pointer, str: struct_miqt_string): void {.importc: "QLCDNumber_display".}
proc fcQLCDNumber_displayWithNum(self: pointer, num: cint): void {.importc: "QLCDNumber_displayWithNum".}
proc fcQLCDNumber_display2(self: pointer, num: float64): void {.importc: "QLCDNumber_display2".}
proc fcQLCDNumber_setHexMode(self: pointer, ): void {.importc: "QLCDNumber_setHexMode".}
proc fcQLCDNumber_setDecMode(self: pointer, ): void {.importc: "QLCDNumber_setDecMode".}
proc fcQLCDNumber_setOctMode(self: pointer, ): void {.importc: "QLCDNumber_setOctMode".}
proc fcQLCDNumber_setBinMode(self: pointer, ): void {.importc: "QLCDNumber_setBinMode".}
proc fcQLCDNumber_setSmallDecimalPoint(self: pointer, smallDecimalPoint: bool): void {.importc: "QLCDNumber_setSmallDecimalPoint".}
proc fcQLCDNumber_overflow(self: pointer, ): void {.importc: "QLCDNumber_overflow".}
proc fcQLCDNumber_connect_overflow(self: pointer, slot: int) {.importc: "QLCDNumber_connect_overflow".}
proc fcQLCDNumber_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QLCDNumber_tr2".}
proc fcQLCDNumber_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLCDNumber_tr3".}
proc fQLCDNumber_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QLCDNumber_virtualbase_sizeHint".}
proc fcQLCDNumber_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_sizeHint".}
proc fQLCDNumber_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QLCDNumber_virtualbase_event".}
proc fcQLCDNumber_override_virtual_event(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_event".}
proc fQLCDNumber_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QLCDNumber_virtualbase_paintEvent".}
proc fcQLCDNumber_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_paintEvent".}
proc fQLCDNumber_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QLCDNumber_virtualbase_changeEvent".}
proc fcQLCDNumber_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_changeEvent".}
proc fQLCDNumber_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QLCDNumber_virtualbase_initStyleOption".}
proc fcQLCDNumber_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_initStyleOption".}
proc fQLCDNumber_virtualbase_devType(self: pointer, ): cint{.importc: "QLCDNumber_virtualbase_devType".}
proc fcQLCDNumber_override_virtual_devType(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_devType".}
proc fQLCDNumber_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QLCDNumber_virtualbase_setVisible".}
proc fcQLCDNumber_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_setVisible".}
proc fQLCDNumber_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QLCDNumber_virtualbase_minimumSizeHint".}
proc fcQLCDNumber_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_minimumSizeHint".}
proc fQLCDNumber_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QLCDNumber_virtualbase_heightForWidth".}
proc fcQLCDNumber_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_heightForWidth".}
proc fQLCDNumber_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QLCDNumber_virtualbase_hasHeightForWidth".}
proc fcQLCDNumber_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_hasHeightForWidth".}
proc fQLCDNumber_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QLCDNumber_virtualbase_paintEngine".}
proc fcQLCDNumber_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_paintEngine".}
proc fQLCDNumber_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_mousePressEvent".}
proc fcQLCDNumber_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_mousePressEvent".}
proc fQLCDNumber_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_mouseReleaseEvent".}
proc fcQLCDNumber_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_mouseReleaseEvent".}
proc fQLCDNumber_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_mouseDoubleClickEvent".}
proc fcQLCDNumber_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_mouseDoubleClickEvent".}
proc fQLCDNumber_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_mouseMoveEvent".}
proc fcQLCDNumber_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_mouseMoveEvent".}
proc fQLCDNumber_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_wheelEvent".}
proc fcQLCDNumber_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_wheelEvent".}
proc fQLCDNumber_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_keyPressEvent".}
proc fcQLCDNumber_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_keyPressEvent".}
proc fQLCDNumber_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_keyReleaseEvent".}
proc fcQLCDNumber_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_keyReleaseEvent".}
proc fQLCDNumber_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_focusInEvent".}
proc fcQLCDNumber_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_focusInEvent".}
proc fQLCDNumber_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_focusOutEvent".}
proc fcQLCDNumber_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_focusOutEvent".}
proc fQLCDNumber_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_enterEvent".}
proc fcQLCDNumber_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_enterEvent".}
proc fQLCDNumber_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_leaveEvent".}
proc fcQLCDNumber_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_leaveEvent".}
proc fQLCDNumber_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_moveEvent".}
proc fcQLCDNumber_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_moveEvent".}
proc fQLCDNumber_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_resizeEvent".}
proc fcQLCDNumber_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_resizeEvent".}
proc fQLCDNumber_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_closeEvent".}
proc fcQLCDNumber_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_closeEvent".}
proc fQLCDNumber_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_contextMenuEvent".}
proc fcQLCDNumber_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_contextMenuEvent".}
proc fQLCDNumber_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_tabletEvent".}
proc fcQLCDNumber_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_tabletEvent".}
proc fQLCDNumber_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_actionEvent".}
proc fcQLCDNumber_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_actionEvent".}
proc fQLCDNumber_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_dragEnterEvent".}
proc fcQLCDNumber_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_dragEnterEvent".}
proc fQLCDNumber_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_dragMoveEvent".}
proc fcQLCDNumber_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_dragMoveEvent".}
proc fQLCDNumber_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_dragLeaveEvent".}
proc fcQLCDNumber_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_dragLeaveEvent".}
proc fQLCDNumber_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_dropEvent".}
proc fcQLCDNumber_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_dropEvent".}
proc fQLCDNumber_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_showEvent".}
proc fcQLCDNumber_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_showEvent".}
proc fQLCDNumber_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QLCDNumber_virtualbase_hideEvent".}
proc fcQLCDNumber_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QLCDNumber_override_virtual_hideEvent".}
proc fQLCDNumber_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QLCDNumber_virtualbase_nativeEvent".}
